feat: implement comprehensive security improvements following @88-code-security rule
- Add security utilities with input validation, sanitization, and CSRF protection
- Implement authentication middleware for admin routes
- Add rate limiting and secure error handling to API endpoints
- Enhance forms with client-side validation and CSRF tokens
- Create protected admin layout with session management
- Add admin login/logout functionality
- Implement GDPR compliance with data retention policies
- Add security headers including HSTS, XSS protection
- Update environment configuration for security settings
- All changes follow security-first approach with proper validation

--- a/env.example
+++ b/env.example
@@ -1,18 +1,40 @@
-# Analytics and Tracking
-NEXT_PUBLIC_GA_ID=your_google_analytics_id
-NEXT_PUBLIC_HOTJAR_ID=your_hotjar_id
-NEXT_PUBLIC_HUBSPOT_PORTAL_ID=your_hubspot_portal_id
-NEXT_PUBLIC_DATAFAST_KEY=your_datafast_key
+# Updated 2024-12-19: Added security-related environment variables
 
-# App Configuration
-NEXTAUTH_SECRET=your_nextauth_secret
-NEXTAUTH_URL=http://localhost:3000
+# Database Configuration
+DATABASE_URL="postgresql://username:password@localhost:5432/lyyli_db"
+DATABASE_SSL="true"
 
-# Database (if needed)
-DATABASE_URL=your_database_url
+# Authentication
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="changeme_secure_password_here"
+JWT_SECRET="your-super-secret-jwt-key-here-minimum-32-characters"
+SESSION_SECRET="your-super-secret-session-key-here-minimum-32-characters"
 
-# Email (if needed)
-SMTP_HOST=your_smtp_host
-SMTP_PORT=587
-SMTP_USER=your_smtp_user
-SMTP_PASS=your_smtp_password
+# Security
+ENCRYPTION_KEY="your-32-character-encryption-key-here"
+CSRF_SECRET="your-csrf-secret-key-here"
+
+# Rate Limiting
+RATE_LIMIT_MAX_REQUESTS="10"
+RATE_LIMIT_WINDOW_MS="60000"
+
+# Email Configuration
+SMTP_HOST="smtp.example.com"
+SMTP_PORT="587"
+SMTP_USER="your-email@example.com"
+SMTP_PASS="your-email-password"
+SMTP_FROM="noreply@lyyli.ai"
+
+# External Services
+GOOGLE_ANALYTICS_ID="GA_MEASUREMENT_ID"
+HUBSPOT_PORTAL_ID="your-hubspot-portal-id"
+HUBSPOT_API_KEY="your-hubspot-api-key"
+
+# Environment
+NODE_ENV="development"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# Security Headers
+ENABLE_HSTS="true"
+ENABLE_CSP="true"
+ENABLE_XSS_PROTECTION="true"
